[gd_scene load_steps=6 format=2]

[ext_resource path="res://shooter/hud/PlayerCutscene.gd" type="Script" id=1]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/portrait-player.png" type="Texture" id=3]
[ext_resource path="res://assets/menu-computerscreen-horizontal.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 3
outline_color = Color( 0.156863, 0.376471, 0.501961, 1 )
font_data = ExtResource( 2 )

[node name="PlayerCutscene" type="CanvasLayer"]
pause_mode = 2
layer = 0
script = ExtResource( 1 )
type = 1

[node name="TextBackground" type="Sprite" parent="."]
position = Vector2( 1095, 844 )
scale = Vector2( 2, 4 )
texture = ExtResource( 4 )

[node name="Portrait" type="Sprite" parent="."]
position = Vector2( 610, 844 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Text" type="Label" parent="."]
margin_left = 761.0
margin_top = 753.0
margin_right = 1424.0
margin_bottom = 907.0
custom_fonts/font = SubResource( 1 )
text = "Ready to Breach!Ready to Breach!Ready to Breach!Ready to Breach!Ready to Breach!"
autowrap = true
percent_visible = 0.0

[node name="EndCutsceneTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="KeyPress" type="Label" parent="."]
margin_left = 1214.0
margin_top = 914.0
margin_right = 1424.0
margin_bottom = 939.0
custom_fonts/font = SubResource( 1 )
text = "Press F to continue.."

[connection signal="timeout" from="EndCutsceneTimer" to="." method="_on_EndCutsceneTimer_timeout"]
